--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "pg": "^8.13.0"
+    "password-validator": "^5.3.0",
+    "pg": "^8.13.0",
+    "validator": "^13.12.0"
   }
 }
